--- a/index.html
+++ b/index.html
@@ -119,21 +119,21 @@
                   </svg>
                 </a>
               </li>
-              <li>
+              <li class="social-media-item">
                 <a class="social-icon" href="index.html">
                   <svg class="fiil" width="16" height="16">
                     <use href="./images/icons.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
               </li>
-              <li>
+              <li class="social-media-item">
                 <a class="social-icon" href="index.html">
                   <svg class="fiil" width="16" height="16">
                     <use href="./images/icons.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
               </li>
-              <li>
+              <li class="social-media-item">
                 <a class="social-icon" href="index.html">
                   <svg class="fiil" width="16" height="16">
                     <use href="./images/icons.svg#icon-linkedin-1"></use>
@@ -161,21 +161,21 @@
                   </svg>
                 </a>
               </li>
-              <li>
+              <li class="social-media-item">
                 <a class="social-icon" href="index.html">
                   <svg class="fiil" width="16" height="16">
                     <use href="./images/icons.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
               </li>
-              <li>
+              <li class="social-media-item">
                 <a class="social-icon" href="index.html">
                   <svg class="fiil" width="16" height="16">
                     <use href="./images/icons.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
               </li>
-              <li>
+              <li class="social-media-item">
                 <a class="social-icon" href="index.html">
                   <svg class="fiil" width="16" height="16">
                     <use href="./images/icons.svg#icon-linkedin-1"></use>
@@ -241,7 +241,7 @@
               <li class="social-media-item" >
                 <a class="social-icon" href="htpps://www.instagram.com" target="_blank" rel="noopener noreferrer">
                   <svg class="fiil" width="16" height="16">
-                    <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </a>
               </li>
