--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
 <!-- SECTIOT PHOTO -->
     <ul class="list-photo">
         <li class="promo-list-item">            
-            <a href="./index.html" class="link">                        
+            <a href="./index.html" class="link link-hover-focus">                        
             <img src="./images/app.jpg" alt="app" width="360" height="300">
             <div class="app-name">
              <h2 class="title">
@@ -71,7 +71,7 @@
         </a>
         </li>
         <li class="promo-list-item">
-            <a href="./index.html" class="link">               
+            <a href="./index.html" class="link link-hover-focus">               
             <img src="./images/paybyphone.jpg" alt="paymant" width="360" height="300">
             <div class="app-name">
             <h2 class="title">
@@ -83,7 +83,7 @@
         </a>
         </li>
         <li class="promo-list-item">
-            <a href="./index.html" class="link">               
+            <a href="./index.html" class="link link-hover-focus">               
             <img src="./images/computer-phone.jpg" alt="computerandphone" width="360" height="300">
             <div class="app-name">
             <h2 class="title">
@@ -95,7 +95,7 @@
         </a>
         </li>
         <li class="promo-list-item">
-            <a href="./index.html" class="link">                
+            <a href="./index.html" class="link link-hover-focus">                
             <img src="./images/godrive.jpg" alt="driver" width="360" height="300">
             <div class="app-name">
             <h2 class="title">
@@ -107,7 +107,7 @@
         </a>
         </li>
         <li class="promo-list-item">
-            <a href="./index.html" class="link">               
+            <a href="./index.html" class="link link-hover-focus">               
             <img src="./images/pictuteonphone.jpg" alt="picture" width="360" height="300">
             <div class="app-name">
             <h2 class="title">
@@ -119,7 +119,7 @@
         </a>
         </li>
         <li class="promo-list-item">
-            <a href="./index.html" class="link">               
+            <a href="./index.html" class="link link-hover-focus">               
             <img src="./images/happygirl.jpg" alt="girl" width="360" height="300">
             <div class="app-name">
             <h2 class="title">
@@ -131,7 +131,7 @@
         </a>
         </li>
         <li class="promo-list-item">
-            <a href="./index.html" class="link">               
+            <a href="./index.html" class="link link-hover-focus">               
             <img src="./images/app-phone.jpg" alt="design" width="360" height="300">
             <div class="app-name">
             <h2 class="title">
@@ -143,7 +143,7 @@
         </a>
         </li>
         <li class="promo-list-item">
-            <a href="./index.html" class="link">                
+            <a href="./index.html" class="link link-hover-focus">                
             <img src="./images/pocket-frui.jpg" alt="fruit" width="360" height="300">
             <div class="app-name">
             <h2 class="title">
@@ -155,7 +155,7 @@
         </a>
         </li>
         <li class="promo-list-item">
-            <a href="./index.html" class="link">               
+            <a href="./index.html" class="link link-hover-focus">               
             <img src="./images/capoflatte.jpg" alt="latte" width="360" height="300">
             <div class="app-name">
             <h2 class="title">
