--- a/portfolio.html
+++ b/portfolio.html
@@ -175,6 +175,39 @@
   <a href="./index.html" class="logo link bottom-logo">Web<span class="footer-logo link">Studio</span></a>
    <p class="text-footer">Increase the flow of customers and<br> sales for your business with digital<br> marketing  growth solutions.</p>
 </div>
+<div class="footer-icon">
+    <p class="social-media-text">Social media</p>
+   <ul class="social-media-footer">
+    <li class="social-media-item">
+      <a class="link-footer" href="index.html">
+        <svg class="fiil" width="24" height="24">
+          <use href="./images/icons.svg#icon-instagram-2"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="social-media-item">
+      <a class="link-footer" href="index.html">
+        <svg class="fiil" width="24" height="24">
+          <use href="./images/icons.svg#icon-twitter-1"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="social-media-item">
+      <a class="link-footer" href="index.html">
+        <svg class="fiil" width="24" height="24">
+          <use href="./images/icons.svg#icon-facebook-1"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="social-media-item">
+      <a class="link-footer" href="index.html">
+        <svg class="fiil" width="24" height="24">
+          <use href="./images/icons.svg#icon-linkedin-1"></use>
+        </svg>
+      </a>
+    </li>
+   </ul>
+  </div>
 </footer>
 </body>
 </html>
