--- a/portfolio.html
+++ b/portfolio.html
@@ -170,12 +170,13 @@
     </div>
 </section>
 </main>
-<footer class="footer">
-    <div class="container">
-  <a href="./index.html" class="logo link bottom-logo">Web<span class="footer-logo link">Studio</span></a>
+<footer class="footer"> 
+    <div class="container footer-container ">
+      <div class="container-logo">
+   <a href="./index.html" class="logo link bottom-logo">Web<span class="footer-logo link">Studio</span></a>
    <p class="text-footer">Increase the flow of customers and<br> sales for your business with digital<br> marketing  growth solutions.</p>
-</div>
-<div class="footer-icon">
+  </div>
+   <div class="footer-icon">
     <p class="social-media-text">Social media</p>
    <ul class="social-media-footer">
     <li class="social-media-item">
@@ -208,6 +209,7 @@
     </li>
    </ul>
   </div>
-</footer>
+  </div>
+  </footer>
 </body>
 </html>
