--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </section>
       <!--Команда-->
       <section class="section-team section">
-        <div class="container team-container ">
+        <div class="container">
         <h2 class="promo-title">Ouer Team</h2>
         <ul class="team-list list ">
           <li class="team-list-item">
