--- a/index.html
+++ b/index.html
@@ -114,28 +114,28 @@
             <ul class="social-media">
               <li class="social-media-item" >
                 <a class="social-icon" href="htpps://www.instagram.com" target="_blank" rel="noopener noreferrer">
-                  <svg class="fiil" width="16" height="16">
+                  <svg class="fill" width="16" height="16">
                     <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-item">
                 <a class="social-icon" href="index.html">
-                  <svg class="fiil" width="16" height="16">
+                  <svg class="fill" width="16" height="16">
                     <use href="./images/icons.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-item">
                 <a class="social-icon" href="index.html">
-                  <svg class="fiil" width="16" height="16">
+                  <svg class="fill" width="16" height="16">
                     <use href="./images/icons.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-item">
                 <a class="social-icon" href="index.html">
-                  <svg class="fiil" width="16" height="16">
+                  <svg class="fill" width="16" height="16">
                     <use href="./images/icons.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
@@ -156,28 +156,28 @@
             <ul class="social-media">
               <li class="social-media-item" >
                 <a class="social-icon" href="htpps://www.instagram.com" target="_blank" rel="noopener noreferrer">
-                  <svg class="fiil" width="16" height="16">
+                  <svg class="fill" width="16" height="16">
                     <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-item">
                 <a class="social-icon" href="index.html">
-                  <svg class="fiil" width="16" height="16">
+                  <svg class="fill" width="16" height="16">
                     <use href="./images/icons.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-item">
                 <a class="social-icon" href="index.html">
-                  <svg class="fiil" width="16" height="16">
+                  <svg class="fill" width="16" height="16">
                     <use href="./images/icons.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-item">
                 <a class="social-icon" href="index.html">
-                  <svg class="fiil" width="16" height="16">
+                  <svg class="fill" width="16" height="16">
                     <use href="./images/icons.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
@@ -198,28 +198,28 @@
             <ul class="social-media">
               <li class="social-media-item" >
                 <a class="social-icon" href="htpps://www.instagram.com" target="_blank" rel="noopener noreferrer">
-                  <svg class="fiil" width="16" height="16">
+                  <svg class="fill" width="16" height="16">
                     <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-item">
                 <a class="social-icon" href="index.html">
-                  <svg class="fiil" width="16" height="16">
+                  <svg class="fill" width="16" height="16">
                     <use href="./images/icons.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-item">
                 <a class="social-icon" href="index.html">
-                  <svg class="fiil" width="16" height="16">
+                  <svg class="fill" width="16" height="16">
                     <use href="./images/icons.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-item">
                 <a class="social-icon" href="index.html">
-                  <svg class="fiil" width="16" height="16">
+                  <svg class="fill" width="16" height="16">
                     <use href="./images/icons.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
@@ -240,28 +240,28 @@
             <ul class="social-media">
               <li class="social-media-item" >
                 <a class="social-icon" href="htpps://www.instagram.com" target="_blank" rel="noopener noreferrer">
-                  <svg class="fiil" width="16" height="16">
+                  <svg class="fill" width="16" height="16">
                     <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-item">
                 <a class="social-icon" href="index.html">
-                  <svg class="fiil" width="16" height="16">
+                  <svg class="fill" width="16" height="16">
                     <use href="./images/icons.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-item">
                 <a class="social-icon" href="index.html">
-                  <svg class="fiil" width="16" height="16">
+                  <svg class="fill" width="16" height="16">
                     <use href="./images/icons.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-item">
                 <a class="social-icon" href="index.html">
-                  <svg class="fiil" width="16" height="16">
+                  <svg class="fill" width="16" height="16">
                     <use href="./images/icons.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
@@ -334,28 +334,28 @@
      <ul class="social-media-footer">
       <li class="social-media-item">
         <a class="link-footer" href="index.html">
-          <svg class="fiil" width="24" height="24">
+          <svg class="fill" width="24" height="24">
             <use href="./images/icons.svg#icon-instagram-2"></use>
           </svg>
         </a>
       </li>
       <li class="social-media-item">
         <a class="link-footer" href="index.html">
-          <svg class="fiil" width="24" height="24">
+          <svg class="fill" width="24" height="24">
             <use href="./images/icons.svg#icon-twitter-1"></use>
           </svg>
         </a>
       </li>
       <li class="social-media-item">
         <a class="link-footer" href="index.html">
-          <svg class="fiil" width="24" height="24">
+          <svg class="fill" width="24" height="24">
             <use href="./images/icons.svg#icon-facebook-1"></use>
           </svg>
         </a>
       </li>
       <li class="social-media-item">
         <a class="link-footer" href="index.html">
-          <svg class="fiil" width="24" height="24">
+          <svg class="fill" width="24" height="24">
             <use href="./images/icons.svg#icon-linkedin-1"></use>
           </svg>
         </a>
