--- a/index.html
+++ b/index.html
@@ -334,28 +334,28 @@
      <ul class="social-media-footer">
       <li class="social-media-item">
         <a class="link-footer" href="index.html">
-          <svg class="fill" width="24" height="24">
+          <svg class="fill-footer" width="24" height="24">
             <use href="./images/icons.svg#icon-instagram-2"></use>
           </svg>
         </a>
       </li>
       <li class="social-media-item">
         <a class="link-footer" href="index.html">
-          <svg class="fill" width="24" height="24">
+          <svg class="fill-footer" width="24" height="24">
             <use href="./images/icons.svg#icon-twitter-1"></use>
           </svg>
         </a>
       </li>
       <li class="social-media-item">
         <a class="link-footer" href="index.html">
-          <svg class="fill" width="24" height="24">
+          <svg class="fill-footer" width="24" height="24">
             <use href="./images/icons.svg#icon-facebook-1"></use>
           </svg>
         </a>
       </li>
       <li class="social-media-item">
         <a class="link-footer" href="index.html">
-          <svg class="fill" width="24" height="24">
+          <svg class="fill-footer" width="24" height="24">
             <use href="./images/icons.svg#icon-linkedin-1"></use>
           </svg>
         </a>
