--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         <ul class="customers-list">
           <li class="customers-icon">
             <a href="index.html" class="link-icon" target="_blank" rel="noopener noreferrer">
-            <svg class="icon-item" >
+            <svg class="icon-item" width="104" height="56" >
               <use href="./images/icons.svg#icon-Logo" ></use>
             </svg>
           </a>
