--- a/index.html
+++ b/index.html
@@ -102,14 +102,13 @@
         <h2 class="promo-title">Ouer Team</h2>
         <ul class="team-list list ">
           <li class="team-list-item">
-            <div class="job-title">
             <img
               src="./images/mark-guerrero.jpg"
               alt="photo Mark Guerrero"
               width="264"
               height="260"
             />
-            <!-- <div class="job-title"> -->
+            <div class="job-title">
             <h3 class="title persona-title">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
             <ul class="social-media">
@@ -145,14 +144,13 @@
           </div>
           </li>
           <li class="team-list-item">
-            <div class="job-title">
             <img
               src="./images/tom-ford.jpg"
               alt="photo Tom Ford"
               width="264"
               height="260"
             />
-            <!-- <div class="job-title"> -->
+            <div class="job-title">
             <h3 class="title persona-title">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
             <ul class="social-media">
@@ -188,14 +186,13 @@
           </div>
           </li>
           <li class="team-list-item">
-            <div class="job-title">
             <img
               src="./images/camila-garcia.jpg"
               alt="photo Camila Garcia"
               width="264"
               height="260"
             />
-            <!-- <div class="job-title"> -->
+            <div class="job-title">
             <h3 class="title persona-title">Camila Garcia</h3>
             <p class="text">Marketing</p>
             <ul class="social-media">
@@ -231,14 +228,13 @@
           </div>
           </li>
           <li class="team-list-item">
-            <div class="job-title">
             <img
               src="./images/daniel-wilson.jpg"
               alt="photo Daniel Wilson"
               width="264"
               height="260"
             />
-            <!-- <div class="job-title"> -->
+            <div class="job-title">
             <h3 class="title persona-title">Daniel Wilson</h3>
             <p class="text">UI Designer</p>
             <ul class="social-media">
@@ -282,7 +278,7 @@
         <ul class="customers-list">
           <li class="customers-icon">
             <a href="index.html" class="link-icon" target="_blank" rel="noopener noreferrer">
-            <svg class="icon-item" width="104" height="56" >
+            <svg class="icon-item"  >
               <use href="./images/icons.svg#icon-Logo" ></use>
             </svg>
           </a>
